[gd_scene load_steps=10 format=2]

[ext_resource path="res://CustomizationMenu/Sprites/Cannon.png" type="Texture" id=1]
[ext_resource path="res://GameManager/Scripts/CustomizationMenu.gd" type="Script" id=2]
[ext_resource path="res://CustomizationMenu/Sprites/Cancel.png" type="Texture" id=3]
[ext_resource path="res://Themes/OptionButton.tres" type="Theme" id=4]
[ext_resource path="res://CustomizationMenu/Sprites/CannonFlipped.png" type="Texture" id=5]
[ext_resource path="res://Themes/Dialog.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.219608, 0.34902, 0.701961, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.243137, 0.231373, 0.396078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.67451, 0.156863, 0.278431, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.419608, 0.14902, 0.262745, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 35.0

[sub_resource type="Theme" id=4]
Button/styles/normal = SubResource( 2 )
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 3 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="LeftItem" type="OptionButton" parent="."]
margin_left = 1.0
margin_right = 77.0
margin_bottom = 76.0
theme = ExtResource( 4 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
items = [ "", ExtResource( 3 ), false, 1, null, "", ExtResource( 5 ), false, 1, null ]
selected = 0

[node name="Tween" type="Tween" parent="LeftItem"]

[node name="RightItem" type="OptionButton" parent="."]
margin_left = 76.0
margin_right = 152.0
margin_bottom = 76.0
theme = ExtResource( 4 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
items = [ "", ExtResource( 3 ), false, 0, null, "", ExtResource( 1 ), false, 1, null ]
selected = 0

[node name="Tween" type="Tween" parent="RightItem"]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -48.0
margin_right = 124.5
margin_bottom = 48.0
theme = ExtResource( 6 )
window_title = ""
dialog_autowrap = true

[node name="AlertDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -48.0
margin_right = 137.0
margin_bottom = 48.0
theme = SubResource( 4 )
window_title = "Pas assez!"

[connection signal="item_selected" from="LeftItem" to="." method="_on_LeftItem_item_selected"]
[connection signal="tween_all_completed" from="LeftItem/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="item_selected" from="RightItem" to="." method="_on_RightItem_item_selected"]
[connection signal="tween_all_completed" from="RightItem/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
